// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceItemBuild /> should render 'No Build Found' when [latestBuild=null] 1`] = `
<tr>
  <th>
    Latest Build
  </th>
  <td>
    No Build Found
  </td>
</tr>
`;

exports[`<ReferenceItemBuild /> should render 'No Build Found' when [progress=30] 1`] = `
<tr>
  <th>
    Latest Build
  </th>
  <td>
    No Build Found
  </td>
</tr>
`;

exports[`<ReferenceItemBuild /> should render build info when latestBuild available and [progress=100] 1`] = `
<tr>
  <th>
    Latest Build
  </th>
  <td>
    <Link
      to="/refs/foo/indexes/bar"
    >
      Index 
      3
    </Link>
    <div
      className="text-muted"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Created 
      <RelativeTime
        time="2018-01-01T00:00:00.000000Z"
      />
       by 
      bob
    </div>
  </td>
</tr>
`;
